# happy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.sample  pyproject.toml  requirements_dev.txt
config/: elasticsearch.yml  instances.yml  kibana.yml  setup.sh
happy/: __init__.py  main.py
happy/api/: api.py
happy/api/users/: __init__.py  router.py  service.py
happy/core/: config.py  database.py  logger.py
happy/core/models/: database.py
happy/core/schemas/: __init__.py  user.py
happy/v1/: api.py
happy/v1/endpoints/: users.py
scripts/: docker_entrypoint.sh
