[tool.poetry]
name = "happy"
version = "1.0.0"
description = ""
authors = ["mboivin <mboivin@student.42.fr>"]
readme = "README.md"
repository = "https://github.com/matboivin/happy"

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = {extras = ["async"], version = "^8.4.1"}
elastic-apm = "^6.12.0"
fastapi = "^0.83.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pycodestyle = "^2.9.1"
rich = "^12.5.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
pretty = true
show_traceback = true
color_output = true
strict = true
ignore_missing_imports = true
allow_untyped_decorators = true
allow_subclassing_any = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
